[package]
name = "streamlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
rivulet = { git = "https://github.com/calebzulawski/rivulet.git" }
serde = "1"

[profile.release-lto]
inherits = "release"
lto = true

[lib]
name = "_lib"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[build-dependencies]
pyo3-build-config = "0.19.2"
